--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3 
+  socket_io_client: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
